(fix): button style and spacing

--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+:root {
+	--main-width: 720px;
+}
+
+
 #video {
   border: 1px solid black;
   box-shadow: 2px 2px 3px black;
@@ -17,7 +22,7 @@
 }
 
 .camera {
-  width: 340px;
+  width: var(--main-width);
   display:inline-block;
 }
 
@@ -30,11 +35,11 @@
   position:relative;
   margin-left:auto;
   margin-right:auto;
-  bottom:32px;
+  bottom: 55px;
   background-color: rgba(0, 150, 0, 0.5);
   border: 1px solid rgba(255, 255, 255, 0.7);
   box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
-  font-size: 14px;
+  font-size: 30px;
   font-family: "Lucida Grande", "Arial", sans-serif;
   color: rgba(255, 255, 255, 1.0);
 }
